--- a/index.html
+++ b/index.html
@@ -4,7 +4,300 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./sass/style.css" />
+    <title>Deliver X</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header>
+        <img src="./images/logo.svg" alt="" />
+        <div class="content">
+          <ul>
+            <li><a class="link1" href="#">Home</a></li>
+            <li><a href="#wrapper2">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Cart(0)</a></li>
+          </ul>
+          <button class="btn-1" type="button">Download app</button>
+          <button class="btn-2" type="button">Register</button>
+        </div>
+      </header>
+      <div class="wrapper1">
+        <div class="wrap1">
+          <div class="card1">
+            <p class="p1">Food Delivery Service</p>
+            <h1 class="head1">Delicious food at your fingertips</h1>
+            <p class="p2">
+              A ultricies eget condimentum sed faucibus enim maecenas variusd
+              dolor sitegestas hendrerit et maecenas habitant mattis
+            </p>
+            <div class="button">
+              <button class="btn-3" type="button">Register restaurant</button>
+              <button class="btn-4" type="button">Download app</button>
+            </div>
+            <div class="line"></div>
+            <div class="cards1">
+              <div class="section">
+                <h1 class="head2">10M<span>+</span></h1>
+                <p>Happy customers</p>
+              </div>
+              <div class="section">
+                <h1 class="head2">500k<span>+</span></h1>
+                <p>Restaurants available</p>
+              </div>
+              <div class="section">
+                <h1 class="head2">30M<span>+</span></h1>
+                <p>Successful deliveries</p>
+              </div>
+            </div>
+          </div>
+          <div class="card2">
+            <div class="car2"><img src="./images/IMAGE2.png" alt="" /></div>
+          </div>
+        </div>
+        <div class="card3">
+          <div class="cards2">
+            <p>Trusted by 5,000+ restaurants around</p>
+            <p>the world</p>
+          </div>
+          <div class="cards3">
+            <img src="./images/Gamburger.svg" alt="" />
+            <img src="./images/Lunch.svg" alt="" />
+            <img src="./images/Spoon.svg" alt="" />
+            <img src="./images/Watermelon.svg" alt="" />
+          </div>
+        </div>
+        <div class="line2"></div>
+      </div>
+      <div id="wrapper2">
+        <p class="p1">How it works</p>
+        <h1>
+          Our simple, yet efficient <br />
+          delivery system
+        </h1>
+        <p class="p2">
+          Lorem ipsum dolor sit amet consectetur adipiscing elit tortor eu
+          egestas morbi sem vulputate etiam facilisis pellentesque
+        </p>
+        <div class="card4">
+          <div class="cards4">
+            <img src="./images/phone.svg" alt="" />
+            <h1>
+              1. Create a free account <br />
+              at Deliver X today
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur <br />
+              adipiscing eli mattis sit phasellus mollis sit <br />
+              aliquam
+            </p>
+          </div>
+          <div class="cards4">
+            <img src="./images/market.svg" alt="" />
+            <h1>
+              2. Order from your <br />
+              favorite restaurant
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur <br />
+              adipiscing eli mattis sit phasellus mollis sit <br />
+              aliquam
+            </p>
+          </div>
+          <div class="cards4">
+            <img src="./images/bike.svg" alt="" />
+            <h1>
+              3. Receive right in your <br />
+              house, hassle-free
+            </h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur <br />
+              adipiscing eli mattis sit phasellus mollis sit <br />
+              aliquam
+            </p>
+          </div>
+        </div>
+        <div class="card5">
+          <button class="btn-5" type="button">Register restaurant</button>
+          <button class="btn-6" type="button">Download app</button>
+        </div>
+        <div class="line"></div>
+      </div>
+      <div class="page-7">
+        <div class="page-7-upper">
+          <h1>What Our</h1>
+          <h1>Clients Say</h1>
+        </div>
+        <div class="page-7-underupper">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit semper dalar
+            elementum <br />
+            tempus hac
+            <b>tellus libero</b>
+          </p>
+          <div>
+            <button type="button" class="orange">Register Restaurant</button>
+            <button type="button" class="white">Download app</button>
+          </div>
+        </div>
+        <div class="page-7-lower">
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE.png" alt="" />
+                  <div class="name">
+                    <span>John Carter</span>
+                    <p>Echo Park</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE 2.png" alt="" />
+                  <div class="name">
+                    <span>Sophie Moo</span>
+                    <p>Hollywood</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE 3.png" alt="" />
+                  <div class="name">
+                    <span>Matt Cannon</span>
+                    <p>Little Tokyo</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE 4.png" alt="" />
+                  <div class="name">
+                    <span>Lily Woods</span>
+                    <p>Melsore</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE 5.png" alt="" />
+                  <div class="name">
+                    <span>Andy Smith</span>
+                    <p>Koreatown</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <div class="card-portrait">
+                <div class="main-name">
+                  <img src="./images/IMAGE 6.png" alt="" />
+                  <div class="name">
+                    <span>Emily Williams</span>
+                    <p>Chinatown</p>
+                  </div>
+                </div>
+                <div class="icon">--</div>
+              </div>
+            </div>
+            <div class="card-text">
+              <p>
+                “Lorem ipsum dolor sit ametolil col consectetur adipiscing
+                lectus a nunc mauris scelerisque <sup>sed egestas.”</sup>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-8">
+        <div class="left-phone"></div>
+        <div class="right-phone"></div>
+      </div>
+      <div class="page-8">
+        <div class="left-8">
+          <span>
+            Start attracting <br />
+            more <b>clients today!</b>
+          </span>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing eli mattis sit
+            phasellus mollis sit aliquam sit <br />
+            nullam neque ultrices.
+          </p>
+          <button type="button" class="orange">Register Restaurant</button>
+        </div>
+      </div>
+      <div class="page-9">
+        <div class="page-9-text">
+          <div class="left-9">
+            <img src="./image/Logo.svg" alt="" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do
+              eiusmod tempor <br />
+              incididunt ut.
+            </p>
+          </div>
+          <div class="right-9">
+            <button class="orange" type="button">Download for Android</button>
+            <button class="orange" type="button">Download for IOS</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
